fix viewport tag and add overflow to pre

--- a/index.css
+++ b/index.css
@@ -125,6 +125,7 @@ pre {
   font-family: monospace;
   background: black;
   padding: 15px 10px;
+  overflow: auto;
 }
 code { 
   font-family: monospace;
